# SimpleCASCADE

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
python/: ai_agent.py  ide_agent.py  settings.json
src/core/: Engine3D.cpp
src/player/: PlayerMain.cpp
src/ui/: AICompletion.cpp  AICompletion.hpp  CodeEditor.cpp  CodeEditor.hpp  CodePanel.cpp  CodePanel.hpp  MainWindow.cpp  MainWindow.hpp  ModelEditor.cpp  ModelEditor.hpp
src/utils/: FileHelper.cpp
